--- a/app/views/users/edit/edit-vegetable-form.template.html
+++ b/app/views/users/edit/edit-vegetable-form.template.html
@@ -112,21 +112,25 @@
 						</div>
 						<div class="col-sm-3">
 							{{"veg.chiGiong" | translate }} <span class="has-required">(*)</span>:
-							<input type="text" title="{{tooltips['chiGiong']}}" name="chiGiong" ng-model="data.chiGiong" id="chiGiong" class="input-form form-control">
+							<input type="hidden" title="{{tooltips['chiGiong']}}" name="chiGiong" value="{{data.chiGiong}}" ng-bind="data.chiGiong">
+							<div type="text" inline-text-editor context-menu="contextMenu" id="chiGiong" ng-model="data.chiGiong" contentEditable class="inline-text-editor" title="{{tooltips['chiGiong']}}" name="chiGiong"></div>
 						</div>
 					</div>
 					<div>
 						<div class="col-sm-3">
 							{{"veg.phanChiPhanGiong" | translate }}:
-							<input type="text" title="{{tooltips['phanChiPhanGiong']}}" name="phanChiPhanGiong" ng-model="data.phanChiPhanGiong" id="phanChiPhanGiong" class="input-form form-control">
+							<input type="hidden" title="{{tooltips['phanChiPhanGiong']}}" name="phanChiPhanGiong" value="{{data.phanChiPhanGiong}}" ng-bind="data.phanChiPhanGiong">
+							<div type="text" inline-text-editor context-menu="contextMenu" id="phanChiPhanGiong" ng-model="data.phanChiPhanGiong" contentEditable class="inline-text-editor" title="{{tooltips['phanChiPhanGiong']}}" name="phanChiPhanGiong"></div>
 						</div>
 						<div class="col-sm-3">
 							{{"veg.loai" | translate }}:
-							<input type="text" id="loai" ng-model="data.loai" class="input-form form-control" title="{{tooltips['loai']}}" name="loai">
+							<input type="hidden" title="{{tooltips['loai']}}" name="loai" value="{{data.loai}}" ng-bind="data.loai">
+							<div type="text" inline-text-editor context-menu="contextMenu" id="loai" ng-model="data.loai" contentEditable class="inline-text-editor" title="{{tooltips['loai']}}" name="loai"></div>
 						</div>
 						<div class="col-sm-3">
 							{{"veg.duoiLoai" | translate }}:
-							<input type="text" title="{{tooltips['duoiLoai']}}" name="duoiLoai" ng-model="data.duoiLoai" class="input-form form-control" id="duoiLoai">
+							<input type="hidden" title="{{tooltips['duoiLoai']}}" name="duoiLoai" value="{{data.duoiLoai}}" ng-bind="data.duoiLoai">
+							<div type="text" inline-text-editor context-menu="contextMenu" id="duoiLoai" ng-model="data.duoiLoai" contentEditable class="inline-text-editor" title="{{tooltips['duoiLoai']}}" name="duoiLoai"></div>
 						</div>
 					</div>
 				</div>
