--- a/app/views/templates/footer.template.html
+++ b/app/views/templates/footer.template.html
@@ -4,7 +4,8 @@
 		background-color: #333;
 		padding: 30px 0;
 		color: white;
-		/* position: absolute; */
+		position: absolute; 
+		width: 100%;
 	}
 	.footer-content {
 		display: flex;
