--- a/app/views/users/add-animal-form.template.html
+++ b/app/views/users/add-animal-form.template.html
@@ -123,7 +123,7 @@
 						<div class="col-sm-3">
 							{{"ani.loai" | translate }}: 
 							<input type="hidden" title="{{tooltips['loai']}}" name="loai" value="{{data.loai}}" ng-bind="data.loai">
-							<div type="text" inline-text-editor context-menu="contextMenu" id="loai" ng-model="data.loai" contentEditable class="inline-text-editor" title="{{tooltips['loai']}}" name="loai"></div>
+							<div type="text" inline-text-editor context-menu="contextMenu" id="loai" ng-model="data.loai" contentEditable class="inline-text-editor" title="{{tooltips['loai']}}"></div>
 							<!-- <input type="text" id="loai" ng-model="data.loai" class="input-form form-control" title="{{tooltips['loai']}}" name="loai"> -->
 						</div>
 						<div class="col-sm-3">
@@ -380,18 +380,18 @@
 							{{"ani.viDo" | translate }} <span class="has-required">(*)</span>:
 							<input type="text" id="viDo" ng-show="data.fViTriToaDo=='dd'" title="{{tooltips['viDo']}}" name="viDo" ng-model="data.viDo" class="input-form form-control">
 							<div id="dd" ng-show="data.fViTriToaDo=='dms'" style="margin-top: 5px;" title="{{tooltips['viDo']}}">
-								<input type="number" step="1" ng-model= "data.viDo_do" ng-change="latChange()" class = "coordinates" name=""> độ
-								<input type="number" step="1" ng-model= "data.viDo_phut" ng-change="latChange()" class = "coordinates" name=""> phút
-								<input type="number" step="1" ng-model= "data.viDo_giay" ng-change="latChange()" class = "coordinates" name=""> giây
+								<input type="number" step="1" id="viDo" ng-model= "data.viDo_do" ng-change="latChange()" class = "coordinates" name=""> độ
+								<input type="number" step="1" id="viDo" ng-model= "data.viDo_phut" ng-change="latChange()" class = "coordinates" name=""> phút
+								<input type="number" step="1" id="viDo" ng-model= "data.viDo_giay" ng-change="latChange()" class = "coordinates" name=""> giây
 							</div>
 						</div>
 						<div class="col-sm-4">
 							{{"ani.kinhDo" | translate }} <span class="has-required">(*)</span>:
 							<input type="text" id="kinhDo" ng-show="data.fViTriToaDo=='dd'" title="{{tooltips['kinhDo']}}" name="kinhDo" ng-model="data.kinhDo" class="input-form form-control">
 							<div id="dd" ng-show="data.fViTriToaDo=='dms'" style="margin-top: 5px;" title="{{tooltips['kinhDo']}}">
-								<input type="number" step="1" ng-model="data.kinhDo_do" ng-change="lonChange()" class = "coordinates" name=""> độ
-								<input type="number" step="1" ng-model="data.kinhDo_phut" ng-change="lonChange()" class = "coordinates" name=""> phút
-								<input type="number" step="1" ng-model="data.kinhDo_giay" ng-change="lonChange()" class = "coordinates" name=""> giây
+								<input type="number" step="1" id="kinhDo" ng-model="data.kinhDo_do" ng-change="lonChange()" class = "coordinates" name=""> độ
+								<input type="number" step="1" id="kinhDo" ng-model="data.kinhDo_phut" ng-change="lonChange()" class = "coordinates" name=""> phút
+								<input type="number" step="1" id="kinhDo" ng-model="data.kinhDo_giay" ng-change="lonChange()" class = "coordinates" name=""> giây
 							</div>
 						</div>
 						<div class="col-sm-4">
