--- a/app/views/users/add-animal-form.template.html
+++ b/app/views/users/add-animal-form.template.html
@@ -365,7 +365,7 @@
 						</div>
 					</div>
 				</div>
-				<div class="row" ng-controller="GoogleMapController" style="margin-top: 10px;" ng-init="data.fViTriToaDo = 'dms'">
+				<div class="row" ng-controller="GoogleMapController" style="margin-top: 10px;">
 					<div class="row">
 						<div class="col-sm-5">
 							<label>24. {{"ani.viTriToaDo" | translate }}: </label>
