fix error import excel, add kind of sample

--- a/app/views/users/edit/edit-animal-form.template.html
+++ b/app/views/users/edit/edit-animal-form.template.html
@@ -198,7 +198,7 @@
 					</div>
 					<div class="col-sm-4">
 						<label>15. {{"ani.loaiMauVat" | translate }}<span class="has-required"> (*)</span>:</label>
-						<input type="text" title="{{tooltips['loaiMauVat']}}" name="loaiMauVat" class="input-form flexdatalist flexdatalist-force form-control" data-min-length='0' multiple='multiple' ng-model="data.loaiMauVat" list="loaiMauVat">
+						<input type="text" title="{{tooltips['loaiMauVat']}}" name="loaiMauVat" class="input-form flexdatalist form-control" data-min-length='0' multiple='multiple' ng-model="data.loaiMauVat" list="loaiMauVat">
 						<datalist id="loaiMauVat">
 							<option value="Mẫu nghiên cứu">Mẫu nghiên cứu</option>
 							<option value="Mẫu trưng bày">Mẫu trưng bày</option>
