--- a/app/views/users/edit/edit-land-form.template.html
+++ b/app/views/users/edit/edit-land-form.template.html
@@ -123,7 +123,7 @@
 		        	</div>
 		        	<div class="col-sm-4">
 		          		<label>15. {{"land.loaiMauVat" | translate }} <span class="has-required"> (*)</span>:</label>
-		          		<input type="text" title="{{tooltips['loaiMauVat']}}" name="loaiMauVat" ng-model="data.loaiMauVat" list="loaiMauVat" multiple='multiple' class="input-form form-control flexdatalist flexdatalist-force" data-min-length='0'>
+		          		<input type="text" title="{{tooltips['loaiMauVat']}}" name="loaiMauVat" ng-model="data.loaiMauVat" list="loaiMauVat" multiple='multiple' class="input-form form-control flexdatalist" data-min-length='0'>
 		          		<datalist id="loaiMauVat">
 		            		<option value="Mẫu nghiên cứu">Mẫu nghiên cứu</option>
 				            <option value="Mẫu trưng bày">Mẫu trưng bày</option>
