--- a/app/views/users/add-geological-form.template.html
+++ b/app/views/users/add-geological-form.template.html
@@ -114,7 +114,7 @@
                     <div class="col-sm-4">
                         <label>15. {{"geo.loaiMauVat" | translate }}<span class="has-required"> (*)</span>:</label>
 
-                        <input type="text" title="{{tooltips['loaiMauVat']}}" name="loaiMauVat" ng-model="data.loaiMauVat" list="loaiMauVat" multiple='multiple' class="input-form form-control flexdatalist flexdatalist-force" data-min-length='0'>
+                        <input type="text" title="{{tooltips['loaiMauVat']}}" name="loaiMauVat" ng-model="data.loaiMauVat" list="loaiMauVat" multiple='multiple' class="input-form form-control flexdatalist" data-min-length='0'>
                         <datalist id="loaiMauVat">
                             <option value="Mẫu nghiên cứu">Mẫu nghiên cứu</option>
                             <option value="Mẫu trưng bày">Mẫu trưng bày</option>
@@ -302,8 +302,8 @@
                     <div class="row">
                         <div class="col-sm-4">
                             {{"geo.viDo" | translate }} <span class="has-required">(*)</span>:
-                            <input type="text" id="viDo" ng-show="data.fViTriToaDo=='dd'" title="{{tooltips['viDo']}}" name="viDo" ng-model="data.viDo" class="input-form form-control">
-                            <div id="dd" ng-show="data.fViTriToaDo=='dms'" style="margin-top: 5px;" title="{{tooltips['viDo']}}">
+                            <input type="text" id="viDo" ng-if="data.fViTriToaDo=='dd'" title="{{tooltips['viDo']}}" name="viDo" ng-model="data.viDo" class="input-form form-control">
+                            <div id="dd" ng-if="data.fViTriToaDo=='dms'" style="margin-top: 5px;" title="{{tooltips['viDo']}}">
                                 <input type="number" step="1" id="viDo" ng-model= "data.viDo_do" ng-change="latChange()" class = "coordinates" name=""> độ
                                 <input type="number" step="1" id="viDo" ng-model= "data.viDo_phut" ng-change="latChange()" class = "coordinates" name=""> phút
                                 <input type="number" step="1" id="viDo" ng-model= "data.viDo_giay" ng-change="latChange()" class = "coordinates" name=""> giây
@@ -311,8 +311,8 @@
                         </div>
                         <div class="col-sm-4">
                             {{"geo.kinhDo" | translate }} <span class="has-required">(*)</span>:
-                            <input type="text" id="kinhDo" ng-show="data.fViTriToaDo=='dd'" title="{{tooltips['kinhDo']}}" name="kinhDo" ng-model="data.kinhDo" class="input-form form-control">
-                            <div id="dd" ng-show="data.fViTriToaDo=='dms'" style="margin-top: 5px;" title="{{tooltips['kinhDo']}}">
+                            <input type="text" id="kinhDo" ng-if="data.fViTriToaDo=='dd'" title="{{tooltips['kinhDo']}}" name="kinhDo" ng-model="data.kinhDo" class="input-form form-control">
+                            <div id="dd" ng-if="data.fViTriToaDo=='dms'" style="margin-top: 5px;" title="{{tooltips['kinhDo']}}">
                                 <input type="number" step="1" id="kinhDo" ng-model="data.kinhDo_do" ng-change="lonChange()" class = "coordinates" name=""> độ
                                 <input type="number" step="1" id="kinhDo" ng-model="data.kinhDo_phut" ng-change="lonChange()" class = "coordinates" name=""> phút
                                 <input type="number" step="1" id="kinhDo" ng-model="data.kinhDo_giay" ng-change="lonChange()" class = "coordinates" name=""> giây
