fix role vnmnstaff

--- a/views/roleTooltip.ejs
+++ b/views/roleTooltip.ejs
@@ -9,7 +9,8 @@
 	view: 'Xem',
 	create: 'Thêm',
 	edit: 'Sửa',
-	delete: 'Xóa'
+	delete: 'Xóa',
+	preserve: 'Bảo quản'
 } %>
 <% for (var i = 0; i < allows.length; i++) { %>
 	<% var allow = allows[i] %>
