thêm tên quần đảo hoàng sa và trường sa

--- a/app/asset/css/main.css
+++ b/app/asset/css/main.css
@@ -381,3 +381,8 @@ a.nav:hover{
   line-height: 1.428571429;
   border-radius: 15px;
 }
+.my-div-icon {
+    -webkit-text-stroke-width: 0.3px;
+    -webkit-text-stroke-color: #fff;
+    font-weight: bold;
+}
