update preservation for user of VN museum

--- a/app/views/templates/document.template.html
+++ b/app/views/templates/document.template.html
@@ -72,6 +72,9 @@
         <div class="panel-body">
             <div class="row text-center">
                 <h4>Mẫu file nhập liệu từ excel</h4>
+                <div class="col-sm-12" style="margin-bottom: 20px;">
+                    <span class="label label-warning">Version file excel được cập nhật vào ngày 17/11/2017</span>
+                </div>
                 <div class="col-sm-2 col-xs-3 tem-file">
                     <img src="asset/image/xlsx.png" class="img-responsive img-thumbnail" style="width:100%" alt="Mẫu cổ sinh">
                     <div class="tem-file-title">
