--- a/app/views/templates/document.template.html
+++ b/app/views/templates/document.template.html
@@ -37,10 +37,12 @@
 <div class="container col-sm-8 col-sm-offset-2 col-xs-12 col-md-6 col-md-offset-3">
     <center><h3>Giới thiệu</h3></center>
     <div>
-        <p style="text-indent: 40px;">Bảo tàng Thiên nhiên Việt Nam được thành lập theo Nghị định 27/NĐ-CP, ngày 16/01/2004 (nay là Nghị định 60/2017/NĐ-CP ngày 15/5/2017) của Chính phủ. Chức năng, nhiệm vụ, quyền hạn và cơ cấu tổ chức của Bảo tàng được quy định tại Quyết định số 305/QĐ-KHCNVN, ngày 10/03/2006 (nay là Quyết định số 1738/QĐ-VHL ngày 09/8/2017) của Chủ tịch Viện Hàn lâm Khoa học và Công nghệ Việt Nam.</p>
+        <p><span style="font-size: small;"><span style="font-family: Arial, Helvetica, sans-serif;">Bảo tàng Thiên nhiên Việt Nam được thành lập theo Nghị định 27/NĐ-CP, ngày 16/01/2004 (nay là Nghị định 60/2017/NĐ-CP ngày 15/5/2017) của Chính phủ. Chức năng, nhiệm vụ, quyền hạn và cơ cấu tổ chức của Bảo tàng được quy định tại Quyết định số 305/QĐ-KHCNVN, ngày 10/03/2006 (nay là Quyết định số 1738/QĐ-VHL ngày 09/8/2017) của Chủ tịch Viện Hàn lâm Khoa học và Công nghệ Việt Nam.</span></span></p>
         <img src="asset/image/MG_7665.jpg" class="img-responsive" alt="Image" style="width:100%">
-
-        <p style="text-indent: 40px;" style="margin: 15px 0px;">Trong những năm qua, tuy còn rất nhiều khó khăn, nhưng được sự quan tâm của Đảng, Nhà nước, Viện Hàn lâm Khoa học và Công nghệ Việt Nam và sự giúp đỡ của các bộ, ngành, địa phương, cơ quan, bảo tàng, tập thể và các cá nhân trong và ngoài nước, Bảo tàng Thiên nhiên Việt Nam đã từng bước phát triển và đạt được nhiều thành tích trong nghiên cứu, sưu tầm, bảo quản và chế tác, thiết kế và trưng bày các mẫu vật về thiên nhiên Việt Nam.</p>
+        <br>
+        <br>
+        <p><span style="font-size: small;"><span style="font-family: Arial, Helvetica, sans-serif;">Trong những năm qua, tuy còn rất nhiều khó khăn, nhưng được sự quan tâm của Đảng, Nhà nước, Viện Hàn lâm Khoa học và Công nghệ Việt Nam và sự giúp đỡ của các bộ, ngành, địa phương, cơ quan, bảo tàng, tập thể và các cá nhân trong và ngoài nước, Bảo tàng Thiên nhiên Việt Nam đã từng bước phát triển và đạt được nhiều thành tích trong nghiên cứu, sưu tầm, bảo quản và chế tác, thiết kế và trưng bày các mẫu vật về thiên nhiên Việt Nam.</span></span></p>
+        <br>
     </div>
     <div>
         <h4>Giám đốc Bảo tàng Thiên nhiên Việt Nam được bổ nhiệm trong các giai đoạn:</h4>
@@ -58,12 +60,36 @@
         <h4>Chủ tịch Hội đồng Khoa học: </h4>
     </div>
     <div>
-        <p style="text-indent: 40px;">Bảo tàng Thiên nhiên Việt Nam có 64 cán bộ gồm: 05 phó giáo sư, 16 tiến sĩ, 22 thạc sĩ,  24 cử nhân và kỹ sư, 2 kỹ thuật viên và nhân viên.</p>
+        <p><span style="font-size: small;"><span style="font-family: Arial, Helvetica, sans-serif;">Bảo tàng Thiên nhiên Việt Nam có 64 cán bộ gồm: 05 phó giáo sư, 16 tiến sĩ, 22 thạc sĩ,  24 cử nhân và kỹ sư, 2 kỹ thuật viên và nhân viên.</span></span></p>
 
-        <p style="text-indent: 40px;">Bảo tàng còn có đội ngũ cộng tác viên với hơn 150 người là các nhà khoa học, quản lý ở các viện nghiên cứu, trường đại học, các cơ quan bộ, ngành trong cả nước.</p>
+        <p><span style="font-size: small;"><span style="font-family: Arial, Helvetica, sans-serif;">Bảo tàng còn có đội ngũ cộng tác viên với hơn 150 người là các nhà khoa học, quản lý ở các viện nghiên cứu, trường đại học, các cơ quan bộ, ngành trong cả nước.</span></span></p>
     </div>
     <div style="margin-bottom: 50px;">
+    <div class="col-lg-12 row-article-title">
+    <center><h1 class="title">Chức năng và nhiệm vụ</h1></center>
+    </div>
+    <div class="row-article-body">
+    <p><span style="font-size: small;"><span style="font-family: Arial, Helvetica, sans-serif;">Bảo tàng là tổ chức sự nghiệp văn hoá - khoa học có chức năng sưu tầm, lưu giữ, bảo quản, tổ chức trưng bày giới thiệu và nghiên cứu các sưu tập vật mẫu và tư liệu về thiên nhiên và tài nguyên thiên nhiên Việt Nam phục vụ phổ biến kiến thức, giáo dục, nghiên cứu khoa học, tham quan, du lịch.</span></span></p>
+    <p><span style="font-size: small;"><span style="font-family: Arial, Helvetica, sans-serif;"><strong><em>I. Chức năng:</em></strong> </span></span></p>
+    <p align="justify"><span style="font-size: small;"><span style="font-family: Arial, Helvetica, sans-serif;">Bảo tàng có chức năng nghiên cứu bảo tàng, bảo tồn, sưu tầm, lưu giữ, bảo quản, giám định, trưng bày giới thiệu về địa chất, sinh vật, nhân chủng, tư liệu về thiên nhiên và tài nguyên thiên nhiên trong nước và ngoài nước.</span></span></p>
 
+    <div align="justify"><span style="font-size: small;"><span style="font-family: Arial, Helvetica, sans-serif;"><strong><em>II.</em></strong> <em><strong>Nhiệm vụ:</strong></em></span></span></div>
+    <div align="justify"><span style="font-size: small;"><span style="font-family: Arial, Helvetica, sans-serif;">1.    Tổ chức sưu tầm, xây dựng và quản lý, khai thác bộ sưu tập mẫu vật quốc gia về thiên nhiên phục vụ nghiên cứu và giáo dục.</span></span></div>
+    <div align="justify"><span style="font-size: small;"><span style="font-family: Arial, Helvetica, sans-serif;">2.    Tổ chức trưng bày, triển lãm và các hoạt động phù hợp nhằm giới thiệu một cách đầy đủ và toàn diện các giá trị thiên nhiên của Việt Nam và Thế giới.</span></span></div>
+    <div align="justify"><span style="font-size: small;"><span style="font-family: Arial, Helvetica, sans-serif;">3.    Nghiên cứu cơ sở khoa học, đề xuất và thực hiện các giải pháp bảo tồn tài nguyên thiên nhiên; tổ chức thực hiện các nhiệm vụ, đề tài, đề án nghiên cứu khoa học về thiên nhiên, phương án bảo vệ, bảo tồn, sử dụng và phát triển bền vững tài nguyên thiên nhiên, cứu hộ các loài thực vật, động vật.</span></span></div>
+    <div align="justify"><span style="font-size: small;"><span style="font-family: Arial, Helvetica, sans-serif;">4.    Nghiên cứu thiết kế xây dựng kịch bản và các phương án trưng bày theo chủ đề, phân loại, định loại, giám định các mẫu sinh vật, địa chất (đá, khoáng sản, khoáng vật, cổ sinh vật), nhân chủng, các mẫu vật có nguồn gốc thiên nhiên bằng các phương pháp khoa học và công nghệ hiện đại.</span></span></div>
+    <div align="justify"><span style="font-size: small;"><span style="font-family: Arial, Helvetica, sans-serif;">5.    Nghiên cứu, xây dựng, duy trì, phát triển, bảo quản thông tin di truyền của mọi sinh vật đang sống và đã tuyệt chủng của mọi sinh vật; xây dựng, duy trì và phát triển ngân hàng dữ liệu DNA của mọi sinh vật.</span></span></div>
+    <div align="justify"><span style="font-size: small;"><span style="font-family: Arial, Helvetica, sans-serif;">6.    Tổ chức các hoạt động tư vấn kỹ thuật, nghiệp vụ, sản xuất thử nghiệm và dịch vụ khoa học kỹ thuật cho các bảo tàng trong Hệ thống Bảo tàng thiên nhiên Việt Nam và các cơ quan khác khi có yêu cầu trong các lĩnh vực kỹ thuật bảo tàng (chế tác mẫu vật, thiết kế xây dựng kịch bản và các phương án trưng bày theo chủ đề, xây dựng phòng trưng bày và các bộ sưu tập mẫu vật, cứu hộ các loài thực vậy, động vật).</span></span></div>
+    <div align="justify"><span style="font-size: small;"><span style="font-family: Arial, Helvetica, sans-serif;">7.    Tham gia công tác đào tạo trong lĩnh vự nghiên cứu thiên nhiên, xây dựng khoa học và nghiệp vụ bảo tàng theo quy định hiện hành; hướng dẫn, hỗ trợ chuyên môn, nghiệp vụ cho các bảo tàng trong Hệ thống Bảo tàng thiên nhiên Việt Nam.</span></span></div>
+    <div align="justify"><span style="font-size: small;"><span style="font-family: Arial, Helvetica, sans-serif;">8.    Hợp tác quốc tế trong lĩnh vực nghiên cứu thiên nhiên, xây dựng bộ sưu tập mẫu quốc gia, chế tác, bảo quản, giám định mẫu vật và cứu hộ các loài thực vật, động vật theo quy định của Nhà nước và của Viện Hàn lâm.</span></span></div>
+    <div align="justify"><span style="font-size: small;"><span style="font-family: Arial, Helvetica, sans-serif;">9.    Tổ chức các hoạt động truyền thông, phổ biến kiến thức, tuyên truyền giáo dục nâng cao nhận thức và ý thức bảo vệ thiên nhiên và môi trường cộng đồng.</span></span></div>
+    <div align="justify"><span style="font-size: small;"><span style="font-family: Arial, Helvetica, sans-serif;">10.  Tổ chức vận động, tiếp nhận và sử dụng nguồn viện trợ của các tổ chức, cá nhân để cứu hộ, nghiên cứu bảo tồn và phát triển sinh vật rừng theo quy định của Nhà nước và của Viện Hàn lâm.</span></span></div>
+    <div align="justify"><span style="font-size: small;"><span style="font-family: Arial, Helvetica, sans-serif;">11.  Quản lý về tổ chức bộ máy; quản lý và sử dụng cán bộ, công chức, viên chức của đơn vị theo quy định của Nhà nước và của Viện Hàn lâm;</span></span></div>
+    <div align="justify"><span style="font-size: small;"><span style="font-family: Arial, Helvetica, sans-serif;">12.  Quản lý về tài chính, tài sản của đơn vị theo quy định của Nhà nước và của Viện hàn lâm;</span></span></div>
+    <div align="justify"><span style="font-size: small;"><span style="font-family: Arial, Helvetica, sans-serif;">13.  </span></span><span style="font-size: small;"><span style="font-family: Arial, Helvetica, sans-serif;">Thực hiện các nhiệm vụ khác do Chủ tịch Viện Hàn lâm giao.</span></span></div>
+    </div>
+    <br>
+    <br>
     <div class="panel panel-default">
         <div class="panel-heading">
             <center><h3>Tài liệu</h3></center>
