--- a/views/display.ejs
+++ b/views/display.ejs
@@ -346,7 +346,7 @@
 				// })
 				icon: blueIcon
 			})
-			marker.bindLabel("<i class='fa fa-fw fa-circle'></i><b> Quần đảo<br> Hoàng Sa</b>", {noHide: true, className: "paracel-islands", offset: [0, 0] });
+			marker.bindLabel("<i class='fa fa-fw fa-circle'></i><b> Quần đảo<br> Hoàng Sa (VN)</b>", {noHide: true, className: "paracel-islands", offset: [0, 0] });
 			// marker.bindLabel("Paracel Islands", {permanent: true, className: "paracel-islands", offset: [0, 0] });
 			marker.addTo(mymap);
 
@@ -374,7 +374,7 @@
 				// })
 				icon: blueIcon
 			})
-			marker.bindLabel("<i class='fa fa-fw fa-circle'></i><b> Quần đảo<br> Trường Sa</b>", {noHide: true, className: "paracel-islands", offset: [0, 0] });
+			marker.bindLabel("<i class='fa fa-fw fa-circle'></i><b> Quần đảo<br> Trường Sa (VN)</b>", {noHide: true, className: "paracel-islands", offset: [0, 0] });
 			// marker.bindLabel("Paracel Islands", {permanent: true, className: "paracel-islands", offset: [0, 0] });
 			marker.addTo(mymap);
 		</script>
