--- a/views/guest-home.ejs
+++ b/views/guest-home.ejs
@@ -26,7 +26,43 @@
 
       <!-- Collect the nav links, forms, and other content for toggling -->
       <div class="collapse navbar-collapse navbar-ex1-collapse">
-        
+        <ul class="nav navbar-nav">
+          <li class="dropdown" ng-if="restricted" style="">
+            <a href="/app/" class="dropdown-toggle" data-toggle="dropdown"><b>Thêm mẫu vật</b> <b class="caret"></b></a>
+            <ul class="dropdown-menu">
+              <li ng-if="restricted.cosinh.create"><a ui-sref="them-co-sinh" href="/app/#!/co-sinh">Cổ sinh</a></li>
+              <li ng-if="restricted.diachat.create"><a ui-sref="them-dia-chat" href="/app/#!/dia-chat">Địa chất</a></li>
+              <li ng-if="restricted.dongvat.create"><a ui-sref="them-dong-vat" href="/app/#!/dong-vat">Động vật</a></li>
+              <li ng-if="restricted.thonhuong.create"><a ui-sref="them-tho-nhuong" href="/app/#!/tho-nhuong">Thổ nhưỡng</a></li>
+              <li ng-if="restricted.thucvat.create"><a ui-sref="them-thuc-vat" href="/app/#!/thuc-vat">Thực vật</a></li>
+            </ul>
+          </li>
+          <li class="dropdown" ng-if="restricted">
+            <a href="/app/" class="dropdown-toggle" data-toggle="dropdown"><b>Quản lý mẫu vật</b> <b class="caret"></b></a>
+            <ul class="dropdown-menu">
+              <li ng-if="restricted.cosinh.create"><a ui-sref="quan-ly-co-sinh" href="/app/#!/quan-ly-mau/co-sinh">Mẫu cổ sinh</a></li>
+              <li ng-if="restricted.diachat.create"><a ui-sref="quan-ly-dia-chat" href="/app/#!/quan-ly-mau/dia-chat">Mẫu địa chất</a></li>
+              <li ng-if="restricted.dongvat.create"><a ui-sref="quan-ly-dong-vat" href="/app/#!/quan-ly-mau/dong-vat">Mẫu động vật</a></li>
+              <li ng-if="restricted.thonhuong.create"><a ui-sref="quan-ly-tho-nhuong" href="/app/#!/quan-ly-mau/tho-nhuong">Mẫu thổ nhưỡng</a></li>
+              <li ng-if="restricted.thucvat.create"><a ui-sref="quan-ly-thuc-vat" href="/app/#!/quan-ly-mau/thuc-vat">Mẫu thực vật</a></li>
+            </ul>
+          </li>
+          <li class="dropdown">
+            <a href="/app/" class="dropdown-toggle" data-toggle="dropdown"><b>Truy vấn</b> <b class="caret"></b></a>
+            <ul class="dropdown-menu">
+              <li><a ui-sref="tim-kiem" href="/app/#!/tim-kiem">Truy vấn dữ liệu</a></li>
+              <li><a ui-sref="leaflet-map" href="/app/#!/map">Truy vấn bản đồ</a></li>
+            </ul>
+          </li>
+          <li class="dropdown">
+            <a href="/app/" class="dropdown-toggle" data-toggle="dropdown"><b>Báo cáo</b> <b class="caret"></b></a>
+            <ul class="dropdown-menu">
+              <li><a href="/log/all">Lịch sử nhập liệu</a></li>
+              <li><a href="/manager/statistic">Thống kê</a></li>
+            </ul>
+          </li>
+          <li class=""><a ui-sref="document" href="/app/#!/tai-lieu"><b>Tài liệu</b></a></li>
+        </ul>
         <ul class="nav navbar-nav navbar-right" ng-controller="translateCtrl">
           <!-- <li><a ui-sref="tim-kiem" class="btn btn-default"><span class="glyphicon glyphicon-search"></span></a></li> -->
           <!-- <li ng-click="changeLang('eng')"><a href=""><img src="/app/asset/image/en.gif"></a></li> -->
